test/libsolidity/syntaxTests/operators/userDefined/operator_parsing_operator_named_as.sol
using {f as as} for uint;
// ----
// ParserError 4403: (12-14): Not a user-definable operator: as. Only the following operators can be user-defined: |, &, ^, ~, +, -, *, /, %, ==, !=, <, >, <=, >=
